--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contrôle palette Masterpal®</title>
-    <meta content="Masterpal® est une solution de contrôle automatique pour les palettes vides ou les charges palettisées." name="description">
-    <meta content="controle, palette, contrôle, palettes" name="keywords">
+    <title>Élévateur de palettes automatisé Montepal®</title>
+    <meta content="Le Montepal® est un élévateur automatisé et sécurisé pour charges palettisées" name="description">
+    <meta content="ascenseur, monte-charge, charge, palette, élévateur" name="keywords">
   
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon">
