--- a/en/index.html
+++ b/en/index.html
@@ -418,8 +418,8 @@
           </nav>
         </div>
           <div class="BottomBar d-flex justify-content-center justify-content-md-end">
-            <a data-fancybox data-src="#dialog-content" class="BottomBar-link">Mention légales</a>
-            <a href="#" class="BottomBar-link">Gestion des cookies</a>
+            <a data-fancybox data-src="#dialog-content" class="BottomBar-link">Legal notice</a>
+            <a href="#" class="BottomBar-link"> Privacy Policy</a>
           </div>
           
           <div id="dialog-content" style="display:none;max-width:80%;">
