--- a/en/index.html
+++ b/en/index.html
@@ -34,7 +34,7 @@
   <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div id ="version-info"class="version-info d-flex align-items-center">
-        <a class="version d-flex align-items-center" href="../../masterpal/index.html">FR</a>
+        <a class="version d-flex align-items-center" href="../../thonesv.github.io/index.html">FR</a>
         <a class="version active d-flex align-items-center" href="index.html">EN</a>
       </div>
 
