--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div id ="version-info"class="version-info d-flex align-items-center">
         <a class="version active d-flex align-items-center" href="index.html">FR</a>
-        <a class="version d-flex align-items-center" href="../en/index.html">EN</a>
+        <a class="version d-flex align-items-center" href="en/index.html">EN</a>
       </div>
 
       <div class="social-links d-none d-md-flex align-items-center justify-content-center">
