--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="container" data-aos="fade" data-aos-delay="100" data-aos-duration = "800">
       <div class="row">
         <div class="col-xl-8 col-md-12 blur">
-          <h1>SYSTÈME DE CONVOYAGE VERTICAL SUR MESURE : MONTEPAL<sup>®</sup></h1>
+          <h1>ÉLÉVATEUR DE PALETTES AUTOMATISÉ MONTEPAL<sup>®</sup></h1>
           <h2>AUTOMATISEZ LE TRANSPORT DE VOS FLUX DE MARCHANDISES ENTRE LES DIFFÉRENTS NIVEAUX DE VOS BATÎMENTS.</h2>
           <h3>L’élévateur de palettes MONTEPAL<sup>®</sup> est destiné à transporter vos charges palettisées en toute sécurité entre les différents niveaux de vos bâtiments. Il permet également de réaliser des liaisons inter-bâtiments.</h3>
        </div>
@@ -82,7 +82,7 @@
   
         <div class="row justify-content-center">
           <div class="col-lg-7 col-md-12 text-center ">
-            <h2>Gagnez en productivité et en sécurité avec le système Montepal<sup>®</sup></h2>
+            <h2>Gagnez en productivité et en sécurité avec le système MONTEPAL<sup>®</sup></h2>
             <h3>Conçu et fabriqué en fonction de votre environnement et vos besoins.</h3>
           </div>
         </div>
@@ -96,10 +96,10 @@
               <div class="accordion-list">
                 <ul>
                   <li>
-                    <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#accordion-list-1">Quels sont les types de charges pouvant être transportées par le MONTEPAL<sup>®</sup> ?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                    <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#accordion-list-1">Quels sont les types de charges pouvant être transportées par l'élévateur MONTEPAL<sup>®</sup> ?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                     <div id="accordion-list-1" class="collapse" data-bs-parent=".accordion-list">
                       <p>
-                        Notre élévateur Montepal est conçu en fonction de votre besoin et s'adapte parfaitement à ces types de produits :<br>
+                        Notre élévateur Montepal est conçu en fonction de votre besoin et s'adapte parfaitement à tous types de produits :<br>
                         -	Palettes <br>
                         -	Cages fils <br>
                         -	Rolls <br>
@@ -111,7 +111,7 @@
                   </li>
   
                   <li>
-                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed">Quelle est la charge maximale que peut supporter le MONTEPAL<sup>®</sup> ?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed">Quelle est la charge maximale que peut supporter l'élévateur MONTEPAL<sup>®</sup> ?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                     <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
                       <p>
                         Charge maximale jusqu’à 2 000 kg.
@@ -120,7 +120,7 @@
                   </li>
   
                   <li>
-                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed">Quelle est la cadence du MONTEPAL<sup>®</sup> ?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed">Quelle est la cadence de l'élévateur MONTEPAL<sup>®</sup> ?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                     <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
                       <p>
                         Cadence maximale jusqu’à 150 palettes / heure.
@@ -129,41 +129,45 @@
                   </li>
   
                   <li>
-                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-4" class="collapsed">Le MONTEPAL<sup>®</sup> peut-il s'utiliser dans le sens montant et descendant ?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-4" class="collapsed">L'élévateur MONTEPAL<sup>®</sup> peut-il s'utiliser dans le sens montant et descendant ?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                     <div id="accordion-list-4" class="collapse" data-bs-parent=".accordion-list">
                       <p>
                         Oui, le MONTEPAL<sup>®</sup> à plusieurs fonctions : <br>
                         -	Sens montant exclusivement<br>
+                        -	Sens descendant exclusivement<br>
                         -	Sens montant et descendant<br>                    
                       </p>
                     </div>
                   </li>
   
                   <li>
-                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-6" class="collapsed">Le MONTEPAL<sup>®</sup> peut-il être intégré dans une ligne de convoyage existante ?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-6" class="collapsed">L'élévateur MONTEPAL<sup>®</sup> peut-il être intégré dans une ligne de convoyage existante ?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                     <div id="accordion-list-6" class="collapse" data-bs-parent=".accordion-list">
                       <p>
                         Oui, l’élévateur de palettes peut être autonome ou intégré dans une ligne de convoyage.                    </p>
                     </div>
                   </li>
+
                   <li>
-                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-7" class="collapsed">Quelles sont les finitions possibles ?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-7" class="collapsed">Quelles sont les finitions possibles de l'élévateur MONTEPAL<sup>®</sup>?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                     <div id="accordion-list-7" class="collapse" data-bs-parent=".accordion-list">
                       <p>
-                        -	Acier peint pour les milieux ...<br>
-                        - Acier galvanisé à chaud pour les milieux ...<br>
-                        -	Inox pour les milieux ...<br>     
+                        -	Acier peint<br>
+                        - Acier galvanisé à chaud<br>
+                        -	Inox pour les milieux<br>     
                       </p>
                     </div>
                   </li>
+
                   <li>
-                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-8" class="collapsed">Quelles sont les interfaces possibles ?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-8" class="collapsed">Quelles sont les interfaces compatibles avec l'élévateur MONTEPAL<sup>®</sup>?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                     <div id="accordion-list-8" class="collapse" data-bs-parent=".accordion-list">
                       <p>
                         -	Chariot élévateur<br>
+                        -	AGV ou AMR<br>
                         - Gerbeur<br>
                         -	Transpalette<br>
-                        -	Ligne de convoyage automatique  
+                        -	Intégré dans une ligne de convoyage automatique
                       </p>
                     </div>
                   </li>
@@ -220,14 +224,14 @@
           <div class="row cards">
   
         <div class="col-md-4 d-flex align-items-center img">
-          <img src="assets/img/montepal-B.png" alt="Image 1" class="img-fluid">
-          <img src="assets/img/montepal-b.png" alt="Image 1" class="img-fluid img-top">
+          <img src="assets/img/MONTEPAL-1.png" alt="Image 1" class="img-fluid">
+          <img src="assets/img/MONTEPAL-1b.png" alt="Image 1" class="img-fluid img-top">
   
         </div>
   
         <div class="col-md-8">
             <div>
-                <h3>Application sur mesure</h3>
+                <h3>APPLICATION</h3>
                 <p>L’élévateur de palettes MONTEPAL® est destiné à transporter vos charges palettisées en toute sécurité entre les différents niveaux de vos bâtiments.
                   Il permet également de réaliser des liaisons inter-bâtiments.
                   </p>
@@ -241,15 +245,15 @@
           <div class="row cards">
   
         <div class="col-md-4 d-flex align-items-center img">
-          <img src="assets/img/BLACK.png" alt="Image 1" class="img-fluid">
-          <img src="assets/img/COLOR.png" alt="Image 1" class="img-fluid img-top">
+          <img src="assets/img/MONTEPAL-2.png" alt="Image 1" class="img-fluid">
+          <img src="assets/img/MONTEPAL-2b.png" alt="Image 1" class="img-fluid img-top">
   
         </div>
   
         <div class="col-md-8">
             <div>
-                <h3>Maintenance Facile</h3>
-                <p>Catégorisé dans la classe machine, votre instlation n'est pas soumise au contrôle périodique obligatoire contrairement à un simple monte-charge ou un ascenseur industriel de charge.
+                <h3>GAMME MACHINE</h3>
+                <p>Conçu pour transporter vos charges palettisées en automatique (gestion par automate programmable), l’élévateur de palettes Montepal® n’est pas un monte-charge ou un ascenseur, c’est un équipement classé dans la catégorie machine (pas de contrôle périodique obligatoire)
                   </p>
             </div>
         </div>
@@ -263,15 +267,15 @@
           <div class="row cards">
   
         <div class="col-md-4 d-flex align-items-center img">
-          <img src="assets/img/montepal-A1.png" alt="Image 1" class="img-fluid">
-          <img src="assets/img/montepal-A1.png" alt="Image 1" class="img-fluid img-top">
+          <img src="assets/img/montepal-4.png" alt="Image 1" class="img-fluid">
+          <img src="assets/img/MONTEPAL-4b.png" alt="Image 1" class="img-fluid img-top">
   
         </div>
   
         <div class="col-md-8">
             <div>
-                <h3>Installation facile</h3>
-                <p>L’élévateur de palettes MONTEPAL® est constitué d’un châssis mécanosoudé autoporteur et ne nécessite pas de génie civil (pas de fosse au sol).</p>
+                <h3>POUR TOUS LES MILIEUX</h3>
+                <p>Les différentes options de fabrication permettent à l’élévateur de palettes MONTEPAL® de s’adapter à tous les environnements de travail et d’être utilisé dans tous les secteurs d’activité, Agro-alimentaire, Logistique, Chimie – Pharmacie – Cosmétique, Grande distribution etc.        </p>
             </div>
         </div>
         </div>
@@ -282,15 +286,15 @@
           <div class="row cards">
   
         <div class="col-md-4 d-flex align-items-center img">
-          <img src="assets/img/montepal-c.png" alt="Image 1" class="img-fluid">
-          <img src="assets/img/montepal-c.png" alt="Image 1" class="img-fluid img-top">
+          <img src="assets/img/montepal-3.png" alt="Image 1" class="img-fluid">
+          <img src="assets/img/montepal-3b.png" alt="Image 1" class="img-fluid img-top">
   
         </div>
   
         <div class="col-md-8">
             <div>
-                <h3>Pour tous les milieux</h3>
-                <p>Les différentes options de fabrication permettent à l’élévateur de palettes MONTEPAL® de s’adapter à tous les environnements de travail et d’être utilisé dans tous les secteurs d’activité, Agro-alimentaire, Logistique, Chimie – Pharmacie – Cosmétique, Grande distribution etc.        
+                <h3>CHASSIS AUTOPORTEUR</h3>
+                <p>L’élévateur de palettes Montepal® est constitué d’un châssis mécanosoudé autoporteur et ne nécessite pas de génie civil (pas de fosse au sol) 
                   </p>
             </div>
         </div>
@@ -387,14 +391,14 @@
         <div class="row justify-content-center">
           <div class="col-lg-7 col-md-12 text-center ">
             <h2>Un projet, un devis ou une simple question ?</h2>
-            <h3>Une offre globale : de la conception d’avant-projet, à l'installation sur site, en passant par la validation des protocoles.</h3>
+            <h3>Une offre globale : de la conception d’avant-projet, à l'installation sur site, en passant par la formation du personnel.</h3>
           </div>
         </div>
 
         <div class="d-flex justify-content-evenly align-self-center">
           <a href="https://marceau.fr/fr/demandez-un-devis.html" target="_blank" class="text-center justify-content-around btn-contact-1">Demandez un devis</a>
           <a href="https://marceau.fr/fr/solutions-transitique-manutention-continue.html" target="_blank" class="text-center justify-content-around btn-contact-2">Découvrez nos autres produits</a>
-          <a href="https://marceau.fr/fr/solutions-transitique-manutention-continue.html" target="_blank" class="text-center justify-content-around btn-contact-2">Téléchargez notre brochure</a>
+          <a href="assets/img/PLAQUETTE-BASE DEF.pdf" target="_blank" class="text-center justify-content-around btn-contact-2">Téléchargez notre brochure</a>
 
         </div>
 
