--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
           <div class="row cards">
   
         <div class="col-md-4 d-flex align-items-center img">
-          <img src="assets/img/MONTEPAL-1.png" alt="Image 1" class="img-fluid">
-          <img src="assets/img/MONTEPAL-1b.png" alt="Image 1" class="img-fluid img-top">
+          <img src="assets/img/1.png" alt="Image 1" class="img-fluid">
+          <img src="assets/img/1b.png" alt="Image 1" class="img-fluid img-top">
   
         </div>
   
@@ -245,8 +245,8 @@
           <div class="row cards">
   
         <div class="col-md-4 d-flex align-items-center img">
-          <img src="assets/img/MONTEPAL-2.png" alt="Image 1" class="img-fluid">
-          <img src="assets/img/MONTEPAL-2b.png" alt="Image 1" class="img-fluid img-top">
+          <img src="assets/img/2.png" alt="Image 1" class="img-fluid">
+          <img src="assets/img/2b.png" alt="Image 1" class="img-fluid img-top">
   
         </div>
   
@@ -267,8 +267,8 @@
           <div class="row cards">
   
         <div class="col-md-4 d-flex align-items-center img">
-          <img src="assets/img/MONTEPAL-4.png" alt="Image 1" class="img-fluid">
-          <img src="assets/img/MONTEPAL-4b.png" alt="Image 1" class="img-fluid img-top">
+          <img src="assets/img/4.png" alt="Image 1" class="img-fluid">
+          <img src="assets/img/4b.png" alt="Image 1" class="img-fluid img-top">
   
         </div>
   
@@ -286,8 +286,8 @@
           <div class="row cards">
   
         <div class="col-md-4 d-flex align-items-center img">
-          <img src="assets/img/MONTEPAL-3.png" alt="Image 1" class="img-fluid">
-          <img src="assets/img/MONTEPAL-3b.png" alt="Image 1" class="img-fluid img-top">
+          <img src="assets/img/3.png" alt="Image 1" class="img-fluid">
+          <img src="assets/img/3b.png" alt="Image 1" class="img-fluid img-top">
   
         </div>
   
