--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                       <p>
                         -	Acier peint<br>
                         - Acier galvanisé à chaud<br>
-                        -	Inox pour les milieux<br>     
+                        -	Inox<br>     
                       </p>
                     </div>
                   </li>
@@ -164,10 +164,9 @@
                     <div id="accordion-list-8" class="collapse" data-bs-parent=".accordion-list">
                       <p>
                         -	Chariot élévateur<br>
-                        -	AGV ou AMR<br>
+                        -	AGV ou AMR intégré dans une ligne de convoyage automatique <br>
                         - Gerbeur<br>
                         -	Transpalette<br>
-                        -	Intégré dans une ligne de convoyage automatique
                       </p>
                     </div>
                   </li>
@@ -213,7 +212,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-7 col-md-12 text-center ">
             <h2 class="h2-title">Nos points forts</h2>
-            <h3 class="h3-title">Des options disponibles pour s’adapter à toutes 
+            <h3 class="h3-title">Une conception sur mesure pour s'adapter à 
               vos problématiques.</h3>
           </div>
         </div>
@@ -391,7 +390,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-7 col-md-12 text-center ">
             <h2>Un projet, un devis ou une simple question ?</h2>
-            <h3>Une offre globale : de la conception d’avant-projet, à l'installation sur site, en passant par la formation du personnel.</h3>
+            <h3>Une offre globale : de la conception d’avant-projet, à l'installation sur site.</h3>
           </div>
         </div>
 
