--- a/en/index.html
+++ b/en/index.html
@@ -68,7 +68,7 @@
     <div class="container" data-aos="fade" data-aos-delay="100" data-aos-duration = "800">
       <div class="row">
         <div class="col-xl-8 col-md-12 blur">
-          <h1>CUSTOMIZED VERTICAL CONVEYOR SYSTEM: MONTEPAL<sup>®</sup></h1>
+          <h1>MONTEPAL<sup>®</sup>: AUTOMATED PALLET ELEVATOR</h1>
           <h2>AUTOMATE THE TRANSPORT OF YOUR GOODS FLOWS BETWEEN THE DIFFERENT LEVELS OF YOUR BUILDINGS.</h2>
           <h3>The MONTEPAL<sup>®</sup> pallet elevator is designed to transport your palletized loads safely between the different levels of your buildings. It can also be used for inter-building links.</h3>
        </div>
@@ -93,7 +93,7 @@
           <div class="col-xl-12 col-lg-12 d-flex flex-column" data-aos="fade-up" data-aos-delay="300" data-aos-duration = "800">
             <div class="product-cards">
               <div class="vid-container d-flex justify-content-center">
-                <iframe src="https://www.youtube-nocookie.com/embed//Z2q-psUmqWE?showinfo=0&modestbranding=1&controls=1&rel=0" class="embed-responsive-item" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen showinfo="0"></iframe>
+                <iframe src="https://www.youtube-nocookie.com/embed//z20wgggkhtk?showinfo=0&modestbranding=1&controls=1&rel=0" class="embed-responsive-item" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen showinfo="0"></iframe>
                 </div>   
               <div class="accordion-list">
                 <ul>
@@ -135,6 +135,7 @@
                       <p>
                         Yes, the MONTEPAL<sup>®</sup> has several functions:<br>
                         -	Direction of climb only<br>
+                        -	Direction of descent only<br>
                         -	Direction of climb and descent<br>                    
                       </p>
                     </div>
@@ -151,9 +152,9 @@
                     <a data-bs-toggle="collapse" data-bs-target="#accordion-list-7" class="collapsed">WHAT FINISHES ARE POSSIBLE?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                     <div id="accordion-list-7" class="collapse" data-bs-parent=".accordion-list">
                       <p>
-                        - Painted steel for environments <br>
-                        - Hot-dip galvanized steel for environments <br>
-                        - Stainless steel for media <br>
+                        - Painted steel<br>
+                        - Hot-dip galvanized steel<br>
+                        - Stainless steel <br>
                       </p>
                     </div>
                   </li>
@@ -162,6 +163,7 @@
                     <div id="accordion-list-8" class="collapse" data-bs-parent=".accordion-list">
                       <p>
                         - Forklift trucks <br>
+                        - AGV or AMR integrated into an automatic conveyor line <br>
                         - Stacker <br>
                         - Pallet truck <br>
                         - Automatic conveyor line
@@ -220,14 +222,14 @@
           <div class="row cards">
   
         <div class="col-md-4 d-flex align-items-center img">
-          <img src="../assets/img/montepal-B.png" alt="Image 1" class="img-fluid">
-          <img src="../assets/img/montepal-b.png" alt="Image 1" class="img-fluid img-top">
+          <img src="../assets/img/1.png" alt="Image 1" class="img-fluid">
+          <img src="../assets/img/1b.png" alt="Image 1" class="img-fluid img-top">
   
         </div>
   
         <div class="col-md-8">
             <div>
-                <h3>Custom applications</h3>
+                <h3>APPLICATION</h3>
                 <p>The MONTEPAL® pallet elevator is designed to transport your palletized loads safely between the different levels of your buildings.
                   It can also be used for inter-building links.
                   </p>
@@ -241,15 +243,15 @@
           <div class="row cards">
   
         <div class="col-md-4 d-flex align-items-center img">
-          <img src="../assets/img/BLACK.png" alt="Image 1" class="img-fluid">
-          <img src="../assets/img/COLOR.png" alt="Image 1" class="img-fluid img-top">
+          <img src="../assets/img/2.png" alt="Image 1" class="img-fluid">
+          <img src="../assets/img/2b.png" alt="Image 1" class="img-fluid img-top">
   
         </div>
   
         <div class="col-md-8">
             <div>
-                <h3>Easy maintenance</h3>
-                <p>Categorized as a machine, your installation is not subject to mandatory periodic inspection, unlike a simple freight elevator or an industrial freight elevator.
+                <h3>MACHINE RANGE</h3>
+                <p>Designed to transport your palletized loads automatically (PLC-controlled), the Montepal® pallet elevator is not a freight elevator or an elevator, and is classified as a machine (no mandatory periodic inspection).
                   </p>
             </div>
         </div>
@@ -263,15 +265,15 @@
           <div class="row cards">
   
         <div class="col-md-4 d-flex align-items-center img">
-          <img src="../assets/img/montepal-A1.png" alt="Image 1" class="img-fluid">
-          <img src="../assets/img/montepal-A1.png" alt="Image 1" class="img-fluid img-top">
+          <img src="../assets/img/4.png" alt="Image 1" class="img-fluid">
+          <img src="../assets/img/4b.png" alt="Image 1" class="img-fluid img-top">
   
         </div>
   
         <div class="col-md-8">
             <div>
-                <h3>Easy to install</h3>
-                <p>The MONTEPAL® pallet elevator is a self-supporting welded frame that requires no civil engineering (no floor pit).</p>
+                <h3>FOR ALL ENVIRONMENTS</h3>
+                <p>The various manufacturing options enable the MONTEPAL® pallet elevator to adapt to all working environments and to be used in all sectors of activity, including agri-food, logistics, chemicals, pharmaceuticals, cosmetics and retail.</p>
             </div>
         </div>
         </div>
@@ -282,16 +284,15 @@
           <div class="row cards">
   
         <div class="col-md-4 d-flex align-items-center img">
-          <img src="../assets/img/montepal-c.png" alt="Image 1" class="img-fluid">
-          <img src="../assets/img/montepal-c.png" alt="Image 1" class="img-fluid img-top">
+          <img src="../assets/img/3.png" alt="Image 1" class="img-fluid">
+          <img src="../assets/img/3b.png" alt="Image 1" class="img-fluid img-top">
   
         </div>
   
         <div class="col-md-8">
             <div>
-                <h3>For all environments</h3>
-                <p>The various manufacturing options enable the MONTEPAL® pallet elevator to adapt to all working environments and to be used in all sectors of activity, including agri-food, logistics, chemicals, pharmaceuticals, cosmetics and retail.        
-                  </p>
+                <h3>SELF-SUPPORTING FRAME</h3>
+                <p>The Montepal® pallet elevator consists of a self-supporting welded frame and requires no civil engineering (no ground pit).</p>
             </div>
         </div>
         </div>
@@ -315,7 +316,7 @@
 
     <div class="row" data-masonry='{"percentPosition": true }'> 
         <div class="col-lg-4 col-md-6 col-12 item">
-          <a href="../assets/img/refs/1.jpg" data-fancybox="gallery" data-caption="Achievement of a Montepal elevator on ...floors for the transport of ... [Agro sector]"></a>
+          <a href="../assets/img/refs/1.jpg" data-fancybox="gallery" data-caption="Achievement of a Montepal elevator on ...floors for the transport of ... [Agro sector]"><img src="../assets/img/refs/1.jpg" alt="Image d'un élévateur Montepal sur ...étages pour le transport de ...  [secteur Agro]"></a>
         </div>
         <div class="col-lg-4 col-md-6 col-12 item">
           <a href="../assets/img/refs/2.jpg" data-fancybox="gallery" data-caption="Achievement of a Montepal elevator on ...floors for the transport of ... [Agro sector]"><img src="../assets/img/refs/2.jpg" alt="Image d'un élévateur Montepal sur ...étages pour le transport de ...  [secteur Agro]"></a>
