--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="col-xl-12 col-lg-12 d-flex flex-column" data-aos="fade-up" data-aos-delay="300" data-aos-duration = "800">
             <div class="product-cards">
               <div class="vid-container d-flex justify-content-center">
-                <iframe src="https://www.youtube-nocookie.com/embed//KSnuEO4Tcb8?showinfo=0&modestbranding=1&controls=1&rel=0" class="embed-responsive-item" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen showinfo="0"></iframe>
+                <iframe src="https://www.youtube-nocookie.com/embed//WzHjcXPzO0w?showinfo=0&modestbranding=1&controls=1&rel=0" class="embed-responsive-item" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen showinfo="0"></iframe>
                 </div>   
               <div class="accordion-list">
                 <ul>
@@ -397,7 +397,7 @@
         <div class="d-flex justify-content-evenly align-self-center">
           <a href="https://marceau.fr/fr/demandez-un-devis.html" target="_blank" class="text-center justify-content-around btn-contact-1">Demandez un devis</a>
           <a href="https://marceau.fr/fr/solutions-transitique-manutention-continue.html" target="_blank" class="text-center justify-content-around btn-contact-2">Découvrez nos autres produits</a>
-          <a href="assets/img/PLAQUETTE-BASE DEF.pdf" target="_blank" class="text-center justify-content-around btn-contact-2">Téléchargez notre brochure</a>
+          <a href="assets/img/PLAQUETTE MONTEPAL.pdf" target="_blank" class="text-center justify-content-around btn-contact-2">Téléchargez notre brochure</a>
 
         </div>
 
