--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="row">
         <div class="col-xl-8 col-md-12 blur">
           <h1>ÉLÉVATEUR DE PALETTES AUTOMATISÉ MONTEPAL<sup>®</sup></h1>
-          <h2>AUTOMATISEZ LE TRANSPORT DE VOS FLUX DE MARCHANDISES ENTRE LES DIFFÉRENTS NIVEAUX DE VOS BATÎMENTS.</h2>
+          <h2>AUTOMATISEZ LE TRANSPORT DE VOS FLUX DE PRODUITS ENTRE LES DIFFÉRENTS NIVEAUX DE VOS BATÎMENTS.</h2>
           <h3>L’élévateur de palettes MONTEPAL<sup>®</sup> est destiné à transporter vos charges palettisées en toute sécurité entre les différents niveaux de vos bâtiments. Il permet également de réaliser des liaisons inter-bâtiments.</h3>
        </div>
     </div>
@@ -213,7 +213,7 @@
           <div class="col-lg-7 col-md-12 text-center ">
             <h2 class="h2-title">Nos points forts</h2>
             <h3 class="h3-title">Une conception sur mesure pour s'adapter à 
-              vos problématiques.</h3>
+              vos exigences.</h3>
           </div>
         </div>
   
@@ -318,22 +318,22 @@
 
     <div class="row" data-masonry='{"percentPosition": true }'> 
         <div class="col-lg-4 col-md-6 col-12 item">
-          <a href="assets/img/refs/1.jpg" data-fancybox="gallery" data-caption="Réalisation d'un élévateur Montepal sur ...étages pour le transport de ...  [secteur Agro]"><img src="assets/img/refs/1.jpg" alt="Image d'un élévateur Montepal sur ...étages pour le transport de ...  [secteur Agro]"></a>
+          <a href="assets/img/refs/img-1.jpg" data-fancybox="gallery" data-caption="Réalisation d'un élévateur Montepal [Secteur Pharmaceutique]"><img src="assets/img/refs/img-1.jpg" alt="Image d'un élévateur Montepal pour le secteur Agroalimentaire"></a>
         </div>
         <div class="col-lg-4 col-md-6 col-12 item">
-          <a href="assets/img/refs/2.jpg" data-fancybox="gallery" data-caption="Réalisation d'un élévateur Montepal sur ...étages pour le transport de ...  [secteur Agro]"><img src="assets/img/refs/2.jpg" alt="Image d'un élévateur Montepal sur ...étages pour le transport de ...  [secteur Agro]"></a>
+          <a href="assets/img/refs/img-2.jpg" data-fancybox="gallery" data-caption="Réalisation d'un élévateur Montepal [Secteur Logistique]"><img src="assets/img/refs/img-2.jpg" alt="Image d'un élévateur Montepal pour le secteur Logistique"></a>
         </div>
         <div class="col-lg-4 col-md-6 col-12 item">
-          <a href="assets/img/refs/3.jpg" data-fancybox="gallery" data-caption="Réalisation d'un élévateur Montepal sur ...étages pour le transport de ...  [secteur Agro]"><img src="assets/img/refs/3.jpg" alt="Image d'un élévateur Montepal sur ...étages pour le transport de ...  [secteur Agro]"></a>
+          <a href="assets/img/refs/img-3.jpg" data-fancybox="gallery" data-caption="Réalisation d'un élévateur Montepal [Secteur Pharmaceutique]"><img src="assets/img/refs/img-3.jpg" alt="Image d'un élévateur Montepal pour le secteur Pharmaceutique"></a>
         </div>
         <div class="col-lg-4 col-md-6 col-12 item">
-          <a href="assets/img/refs/4.jpg" data-fancybox="gallery" data-caption="Réalisation d'un élévateur Montepal sur ...étages pour le transport de ...  [secteur Agro]"><img src="assets/img/refs/4.jpg" alt="Image d'un élévateur Montepal sur ...étages pour le transport de ...  [secteur Agro]"></a>
+          <a href="assets/img/refs/img-4.jpg" data-fancybox="gallery" data-caption="Réalisation d'un élévateur Montepal [Secteur Agroalimentaire]"><img src="assets/img/refs/img-4.jpg" alt="Image d'un élévateur Montepal pour le secteur Agroalimentaire"></a>
         </div>
         <div class="col-lg-4 col-md-6 col-12 item">
-          <a href="assets/img/refs/5.jpg" data-fancybox="gallery" data-caption="Réalisation d'un élévateur Montepal sur ...étages pour le transport de ...  [secteur Agro]"><img src="assets/img/refs/5.jpg" alt="Image d'un élévateur Montepal sur ...étages pour le transport de ...  [secteur Agro]"></a>
+          <a href="assets/img/refs/img-5.jpg" data-fancybox="gallery" data-caption="Réalisation d'un élévateur Montepal [Secteur Logistique]"><img src="assets/img/refs/img-5.jpg" alt="Image d'un élévateur Montepal pour le secteur Logistique"></a>
         </div>
         <div class="col-lg-4 col-md-6 col-12 item">
-          <a href="assets/img/refs/6.jpg" data-fancybox="gallery" data-caption="Réalisation d'un élévateur Montepal sur ...étages pour le transport de ...  [secteur Agro]"><img src="assets/img/refs/6.jpg" alt="Image d'un élévateur Montepal sur ...étages pour le transport de ...  [secteur Agro]"></a>
+          <a href="assets/img/refs/img-6.jpg" data-fancybox="gallery" data-caption="Réalisation d'un élévateur Montepal [Secteur Industriel]"><img src="assets/img/refs/img-6.jpg" alt="Image d'un élévateur Montepal pour le secteur Industriel"></a>
         </div>
 
     </div>
@@ -397,7 +397,7 @@
         <div class="d-flex justify-content-evenly align-self-center">
           <a href="https://marceau.fr/fr/demandez-un-devis.html" target="_blank" class="text-center justify-content-around btn-contact-1">Demandez un devis</a>
           <a href="https://marceau.fr/fr/solutions-transitique-manutention-continue.html" target="_blank" class="text-center justify-content-around btn-contact-2">Découvrez nos autres produits</a>
-          <a href="assets/img/PLAQUETTE MONTEPAL.pdf" target="_blank" class="text-center justify-content-around btn-contact-2">Téléchargez notre brochure</a>
+          <a href="assets/img/PLAQUETTE-BASE DEF.pdf" target="_blank" class="text-center justify-content-around btn-contact-2">Téléchargez notre brochure</a>
 
         </div>
 
