--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <div class="col-md-8">
             <div>
                 <h3>GAMME MACHINE</h3>
-                <p>Conçu pour transporter vos charges palettisées en automatique (gestion par automate programmable), l’élévateur de palettes Montepal® n’est pas un monte-charge ou un ascenseur, c’est un équipement classé dans la catégorie machine (pas de contrôle périodique obligatoire)
+                <p>Conçu pour transporter vos charges palettisées en automatique (gestion par automate programmable), l’élévateur de palettes MONTEPALl® n’est pas un monte-charge ou un ascenseur, c’est un équipement classé dans la catégorie machine (pas de contrôle périodique obligatoire)
                   </p>
             </div>
         </div>
@@ -250,7 +250,7 @@
         <div class="col-md-8">
             <div>
                 <h3>POUR TOUS LES MILIEUX</h3>
-                <p>Les différentes options de fabrication permettent à l’élévateur de palettes MONTEPAL® de s’adapter à tous les environnements de travail et d’être utilisé dans tous les secteurs d’activité, Agro-alimentaire, Logistique, Chimie – Pharmacie – Cosmétique, Grande distribution etc.        </p>
+                <p>Les différentes options de fabrication permettent à l’élévateur de palettes MONTEPAL® de s’adapter aux environnements de travail et d’être utilisé dans tous les secteurs d’activité, Agro-alimentaire, Logistique, Chimie – Pharmacie – Cosmétique, Grande distribution etc.        </p>
             </div>
         </div>
         </div>
@@ -269,7 +269,7 @@
         <div class="col-md-8">
             <div>
                 <h3>CHASSIS AUTOPORTEUR</h3>
-                <p>L’élévateur de palettes Montepal® est constitué d’un châssis mécanosoudé autoporteur et ne nécessite pas de génie civil (pas de fosse au sol) 
+                <p>L’élévateur de palettes MONTEPAL® est constitué d’un châssis mécanosoudé autoporteur et ne nécessite pas de génie civil (pas de fosse au sol) 
                   </p>
             </div>
         </div>
