--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
         <div class="d-flex justify-content-evenly align-self-center">
           <a href="https://marceau.fr/fr/demandez-un-devis.html" target="_blank" class="text-center justify-content-around btn-contact-2">Demandez un devis</a>
           <a href="https://marceau.fr/fr/solutions-transitique-manutention-continue.html" target="_blank" class="text-center justify-content-around btn-contact-2">Découvrez nos autres produits</a>
-          <a href="assets/img/PLAQUETTE MONTEPAL-6 PAGES-WEB.pdf" target="_blank" class="text-center justify-content-around btn-contact-1">Téléchargez notre brochure</a>
+          <a href="assets/img/PLAQUETTE MONTEPAL 6 PAGES-WEB.pdf" target="_bXlank" class="text-center justify-content-around btn-contact-1">Téléchargez notre brochure</a>
 
         </div>
 
